@@ -1,4 +1,3 @@
-Address Book support
 Changing user profiles
 Voice Chat
 Video Chat
