@@ -1,3 +1,6 @@
+* Thu Feb 6 2003 Philip
+- renamed yahoo_add_yab to yahoo_set_yab
+
 * Wed Feb 5 2003 Philip
 - Support for modifying an address book entry
 
